changed preview text and fixed horizontal scrolling

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,10 @@
  
+html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative
+  }
 @media screen  and (max-width:640px){
     .header-img img{
              width: fit-content;
